--- a/resume-site/index.css
+++ b/resume-site/index.css
@@ -601,7 +601,7 @@
 }
 
 .u-section-3 .u-sheet-1 {
-  min-height: 932px;
+  min-height: 788px;
 }
 
 .u-section-3 .u-line-1 {
@@ -614,11 +614,19 @@
 }
 
 .u-section-3 .u-text-1 {
+  width: 340px;
+  margin-left: 0;
+  margin-right: 0;
+  margin-bottom: 60px;
+  font-size: 0.625rem;
+}
+
+.u-section-3 .u-text-2 {
   font-size: 2.5rem;
   margin: 33px 42px 0;
 }
 
-.u-section-3 .u-text-2 {
+.u-section-3 .u-text-3 {
   font-size: 2.25rem;
   font-weight: 700;
   margin: 90px auto 0 31px;
@@ -634,7 +642,7 @@
   padding: 5px 6px 6px 5px;
 }
 
-.u-section-3 .u-text-3 {
+.u-section-3 .u-text-4 {
   background-image: none;
   font-size: 1rem;
   font-style: normal;
@@ -649,27 +657,37 @@
   grid-gap: 0px 0px;
 }
 
+.u-section-3 .u-image-1 {
+  width: 737px;
+  height: 395px;
+  margin: -25px -298px 0 auto;
+}
+
 .u-section-3 .u-line-2 {
   width: 214px;
   transform-origin: left center 0px;
-  margin: 51px auto 0 31px;
+  margin: -319px auto 0 31px;
 }
 
-.u-section-3 .u-text-4 {
-  font-weight: 400;
+.u-section-3 .u-text-5 {
   font-size: 1rem;
-  margin: 11px 511px 0 15px;
+  margin: 12px 511px 0 15px;
 }
 
-.u-section-3 .u-image-1 {
-  width: 729px;
-  height: 388px;
-  margin: -369px -260px 60px auto;
+.u-section-3 .u-text-6 {
+  font-size: 1rem;
+  margin: 9px 511px 0 15px;
+}
+
+.u-section-3 .u-text-7 {
+  background-image: none;
+  font-size: 1rem;
+  margin: 12px 454px 60px 15px;
 }
 
 @media (max-width: 1199px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 1311px;
+    min-height: 1258px;
   }
 
   .u-section-3 .u-line-1 {
@@ -677,7 +695,7 @@
     top: 101px;
   }
 
-  .u-section-3 .u-text-1 {
+  .u-section-3 .u-text-2 {
     --animation-custom_in-translate_x: -300px;
     --animation-custom_in-translate_y: 0px;
     --animation-custom_in-opacity: 0;
@@ -687,7 +705,7 @@
     margin-right: 200px;
   }
 
-  .u-section-3 .u-text-2 {
+  .u-section-3 .u-text-3 {
     width: auto;
     margin-top: 123px;
     margin-left: 185px;
@@ -698,7 +716,7 @@
     margin-left: auto;
   }
 
-  .u-section-3 .u-text-3 {
+  .u-section-3 .u-text-4 {
     width: auto;
     margin-top: 63px;
     margin-right: 267px;
@@ -715,28 +733,42 @@
     grid-template-columns: repeat(undefined, NaN%);
   }
 
+  .u-section-3 .u-image-1 {
+    width: 704px;
+    height: 372px;
+    margin-top: 412px;
+    margin-right: auto;
+  }
+
   .u-section-3 .u-line-2 {
-    margin-top: 79px;
+    margin-top: -705px;
     margin-left: 21px;
   }
 
-  .u-section-3 .u-text-4 {
+  .u-section-3 .u-text-5 {
     width: auto;
-    margin-left: 0;
-    margin-right: 0;
+    margin-top: 7px;
+    margin-right: 314px;
+    margin-left: 12px;
   }
 
-  .u-section-3 .u-image-1 {
-    width: 813px;
-    height: 439px;
-    margin-top: 33px;
-    margin-right: auto;
+  .u-section-3 .u-text-6 {
+    width: auto;
+    margin-top: 10px;
+    margin-right: 305px;
+    margin-left: 21px;
+  }
+
+  .u-section-3 .u-text-7 {
+    width: auto;
+    margin-right: 0;
+    margin-left: 12px;
   }
 }
 
 @media (max-width: 991px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 1114px;
+    min-height: 1133px;
   }
 
   .u-section-3 .u-line-1 {
@@ -744,14 +776,14 @@
     top: 91px;
   }
 
-  .u-section-3 .u-text-1 {
+  .u-section-3 .u-text-2 {
     width: 188px;
     margin-top: 27px;
     margin-left: auto;
     margin-right: auto;
   }
 
-  .u-section-3 .u-text-2 {
+  .u-section-3 .u-text-3 {
     font-size: 1.875rem;
     margin-top: 55px;
     margin-right: 276px;
@@ -763,7 +795,7 @@
     margin-right: 160px;
   }
 
-  .u-section-3 .u-text-3 {
+  .u-section-3 .u-text-4 {
     margin-top: 69px;
     margin-right: 174px;
     margin-left: 12px;
@@ -779,42 +811,51 @@
     grid-template-columns: 100%;
   }
 
+  .u-section-3 .u-image-1 {
+    height: 373px;
+    margin-top: 449px;
+  }
+
   .u-section-3 .u-line-2 {
     width: 213px;
-    margin-top: 89px;
+    margin-top: -733px;
     margin-left: 34px;
   }
 
-  .u-section-3 .u-text-4 {
-    margin-top: 10px;
-    margin-right: 266px;
+  .u-section-3 .u-text-5 {
+    margin-top: 12px;
+    margin-right: 84px;
+    margin-left: 23px;
+  }
+
+  .u-section-3 .u-text-6 {
+    margin-top: 11px;
+    margin-right: 94px;
     margin-left: 12px;
   }
 
-  .u-section-3 .u-image-1 {
-    width: 591px;
-    height: 416px;
-    margin-top: -39px;
-    margin-bottom: 48px;
+  .u-section-3 .u-text-7 {
+    margin-top: 11px;
+    margin-left: 23px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 776px;
+    min-height: 843px;
   }
 
   .u-section-3 .u-line-1 {
     top: 62px;
   }
 
-  .u-section-3 .u-text-1 {
+  .u-section-3 .u-text-2 {
     font-size: 1.5rem;
     width: 204px;
     margin-top: 22px;
   }
 
-  .u-section-3 .u-text-2 {
+  .u-section-3 .u-text-3 {
     font-size: 1.125rem;
     margin-top: 71px;
     margin-right: 46px;
@@ -830,38 +871,49 @@
     padding-right: 5px;
   }
 
-  .u-section-3 .u-text-3 {
+  .u-section-3 .u-text-4 {
     font-size: 0.625rem;
     margin-top: 33px;
     margin-left: 14px;
     margin-right: 14px;
   }
 
+  .u-section-3 .u-image-1 {
+    width: 540px;
+    height: 286px;
+    margin-top: 309px;
+  }
+
   .u-section-3 .u-line-2 {
     width: 150px;
-    height: 2px;
-    margin-top: 86px;
+    margin-top: -517px;
     margin-left: 19px;
   }
 
-  .u-section-3 .u-text-4 {
+  .u-section-3 .u-text-5 {
     font-size: 0.625rem;
     margin-top: 11px;
     margin-left: 0;
     margin-right: 0;
   }
 
-  .u-section-3 .u-image-1 {
-    width: 502px;
-    height: 268px;
-    margin-top: 19px;
-    margin-bottom: 35px;
+  .u-section-3 .u-text-6 {
+    font-size: 0.625rem;
+    margin-top: 7px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-3 .u-text-7 {
+    font-size: 0.625rem;
+    margin-top: 7px;
+    margin-left: 0;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-3 .u-sheet-1 {
-    min-height: 749px;
+    min-height: 700px;
   }
 
   .u-section-3 .u-line-1 {
@@ -871,41 +923,67 @@
   }
 
   .u-section-3 .u-text-1 {
-    width: 213px;
+    width: auto;
+    margin-top: 325px;
+    margin-bottom: 0;
   }
 
   .u-section-3 .u-text-2 {
-    margin-top: 72px;
+    width: 213px;
+    margin-top: -422px;
+  }
+
+  .u-section-3 .u-text-3 {
+    margin-top: 53px;
     margin-right: 36px;
     margin-left: 0;
   }
 
   .u-section-3 .u-btn-1 {
-    margin-right: 17px;
+    margin-top: -22px;
+    margin-right: 20px;
   }
 
-  .u-section-3 .u-text-3 {
+  .u-section-3 .u-text-4 {
     font-style: italic;
-    margin-left: 1px;
-    margin-right: 1px;
+    margin-top: 27px;
+    margin-right: 0;
+    margin-left: 2px;
+  }
+
+  .u-section-3 .u-list-1 {
+    margin-top: 1118px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-3 .u-image-1 {
+    height: 196px;
+    width: 366px;
+    margin-top: -828px;
+    margin-left: -13px;
+    margin-right: -13px;
   }
 
   .u-section-3 .u-line-2 {
     width: 136px;
-    margin-left: 0;
+    margin-top: -446px;
+    margin-left: 15px;
   }
 
-  .u-section-3 .u-text-4 {
-    padding-left: 98px;
-    margin-top: 8px;
-    margin-right: -38px;
-    margin-left: -86px;
+  .u-section-3 .u-text-5 {
+    margin-top: 7px;
   }
 
-  .u-section-3 .u-image-1 {
-    height: 250px;
-    width: 361px;
-    margin: 0 -10px 16px;
+  .u-section-3 .u-text-6 {
+    margin-top: 15px;
+  }
+
+  .u-section-3 .u-text-7 {
+    padding-left: 0;
+    margin-top: -1338px;
+    margin-right: -16px;
+    margin-left: 16px;
   }
 }
 
@@ -1079,6 +1157,20 @@
   color: #ffffff !important;
 }
 
+.u-section-3 .u-text-3:not([data-block-selected]):not([data-cell-selected]),
+.u-section-3 .u-text-3:not([data-block-selected]):not([data-cell-selected]):before,
+.u-section-3 .u-text-3:not([data-block-selected]):not([data-cell-selected]) > .u-container-layout:before {
+  transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, background-size, background-position;
+}
+
+.u-section-3 .u-container-layout:hover .u-text-3:not([data-block-selected]):not([data-cell-selected]) {
+  color: #ffffff !important;
+}
+
+.u-container-layout.hover .u-section-3 .u-text-3:not([data-block-selected]):not([data-cell-selected]) {
+  color: #ffffff !important;
+}
+
 .u-section-3 .u-text-2:not([data-block-selected]):not([data-cell-selected]),
 .u-section-3 .u-text-2:not([data-block-selected]):not([data-cell-selected]):before,
 .u-section-3 .u-text-2:not([data-block-selected]):not([data-cell-selected]) > .u-container-layout:before {
@@ -1090,20 +1182,6 @@
 }
 
 .u-container-layout.hover .u-section-3 .u-text-2:not([data-block-selected]):not([data-cell-selected]) {
-  color: #ffffff !important;
-}
-
-.u-section-3 .u-text-1:not([data-block-selected]):not([data-cell-selected]),
-.u-section-3 .u-text-1:not([data-block-selected]):not([data-cell-selected]):before,
-.u-section-3 .u-text-1:not([data-block-selected]):not([data-cell-selected]) > .u-container-layout:before {
-  transition-property: fill, color, background-color, stroke-width, border-style, border-width, border-top-width, border-left-width, border-right-width, border-bottom-width, custom-border, borders, box-shadow, text-shadow, opacity, border-radius, stroke, border-color, font-size, font-style, font-weight, text-decoration, letter-spacing, transform, background-image, background-size, background-position;
-}
-
-.u-section-3 .u-container-layout:hover .u-text-1:not([data-block-selected]):not([data-cell-selected]) {
-  color: #ffffff !important;
-}
-
-.u-container-layout.hover .u-section-3 .u-text-1:not([data-block-selected]):not([data-cell-selected]) {
   color: #ffffff !important;
 }
 
@@ -1372,13 +1450,13 @@
 
   .u-section-4 .u-text-2 {
     font-size: 0.625rem;
-    margin-top: -274px;
+    margin-top: -275px;
     margin-right: 270px;
   }
 
   .u-section-4 .u-text-3 {
     font-size: 0.625rem;
-    margin-top: 52px;
+    margin-top: 53px;
     margin-right: 270px;
   }
 }
@@ -1390,39 +1468,40 @@
 
   .u-section-4 .u-line-1 {
     width: 100px;
-    top: 169px;
+    top: 159px;
+    left: 0;
   }
 
   .u-section-4 .u-text-1 {
     font-size: 1.125rem;
-    margin-top: 19px;
+    margin-top: 0;
     margin-right: 62px;
     margin-left: 0;
   }
 
   .u-section-4 .u-btn-1 {
     margin-top: -21px;
-    margin-right: 10px;
+    margin-right: 0;
   }
 
   .u-section-4 .u-list-1 {
-    margin-top: 242px;
+    margin-top: 243px;
   }
 
   .u-section-4 .u-image-1 {
     width: 189px;
     height: 206px;
-    margin-top: -206px;
+    margin-top: -165px;
     margin-right: -19px;
   }
 
   .u-section-4 .u-text-2 {
-    margin-top: -205px;
+    margin-top: -246px;
     margin-right: 170px;
   }
 
   .u-section-4 .u-text-3 {
-    margin-top: 53px;
+    margin-top: 61px;
     margin-right: 191px;
   }
 }
